--- a/checker_bonus/Makefile
+++ b/checker_bonus/Makefile
@@ -135,7 +135,7 @@ clean:
 
 # <-- Clean Execution + push_swap Destruction --> #
 fclean: clean
-	@$(RM) $(BIN_DIR)$(NAME)
+	@$(RM) $(BIN_DIR)$(NAME) tags
 	@make fclean -s -C $(BFL_DIR)
 	@echo "🗑️  🦔 $(T_MAGENTA)$(BOLD)$(NAME) $(RESET)$(T_RED)destroyed successfully!$(RESET)"
 
@@ -148,7 +148,7 @@ debug:
 
 # <-- Tags --> #
 tags:
-	@find . -type f -name "*.c" -o -name "*.h" > temp
+	@$(shell find . -type f -name "*.c" -o -name "*.h" > temp)
 	@ctags -F $(shell cat temp)
 	@rm temp
 
